--- a/glossary.tex
+++ b/glossary.tex
@@ -72,7 +72,13 @@
 \newglossaryentry{DPG}
 {
 	name=DPG,
-	description={Dense Prompt Grap}
+	description={Dense Prompt Graph}
+}
+
+\newglossaryentry{SVD}
+{
+	name=SVD,
+	description={Singular Value Decomposition}
 }
 
 \newglossaryentry{DSG}
