--- a/bibliography.bib
+++ b/bibliography.bib
@@ -85,6 +85,36 @@
 	primaryClass={cs.CV}
 }
 
+@article{SVD_LLM_V2,
+	title={Svd-llm v2: Optimizing singular value truncation for large language model compression},
+	author={Wang, Xin and Alam, Samiul and Wan, Zhongwei and Shen, Hui and Zhang, Mi},
+	journal={arXiv preprint arXiv:2503.12340},
+	year={2025}
+}
+
+@article{ASVD,
+	title={Asvd: Activation-aware singular value decomposition for compressing large language models},
+	author={Yuan, Zhihang and Shang, Yuzhang and Song, Yue and Yang, Dawei and Wu, Qiang and Yan, Yan and Sun, Guangyu},
+	journal={arXiv preprint arXiv:2312.05821},
+	year={2023}
+}
+
+@article{kirstain2023pick,
+	title={Pick-a-pic: An open dataset of user preferences for text-to-image generation},
+	author={Kirstain, Yuval and Polyak, Adam and Singer, Uriel and Matiana, Shahbuland and Penna, Joe and Levy, Omer},
+	journal={Advances in neural information processing systems},
+	volume={36},
+	pages={36652--36663},
+	year={2023}
+}
+
+@article{zhang2015singular,
+	title={The singular value decomposition, applications and beyond},
+	author={Zhang, Zhihua},
+	journal={arXiv preprint arXiv:1510.08532},
+	year={2015}
+}
+
 
 @inproceedings{cordts2016cityscapes,
 	title={The cityscapes dataset for semantic urban scene understanding},
