--- a/Methods_Experiments.tex
+++ b/Methods_Experiments.tex
@@ -12,21 +12,32 @@ In magnitude pruning \cite{han2015learning,filters2016pruning,lee2020layer}, the
  \end{equation} The block with the smallest magnitude $M_s = \min_i(M_i)$ is then identified as the primary candidate for removal or compression.
 
 \subsubsection{Representational Similarity Analysis}
-Another approach to identify redundant model components is to compare their input representations with their corresponding outputs representation \cite{men2024shortgpt}. If the transformation between the input and output is marginal, indicating that the specific component performs an approximate identity mapping, the model part is considered a candidate for removal. To quantify the similarity between the input and output features of a transformer block, the central kernel alignment (\gls{CKA}) metric \cite{kornblith2019similarity, pons2024effective} is employed. Let $X \in \mathbb{R}^{n\times d}$ denote the input and $Y \in \mathbb{R}^{n\times d}$ the output features which should be compared. First, the kernels $K$ and $L$ need to be chosen which are the inner product of the input $K=XX^T$ and the output $L=YY^T$ in the linear case. To ensure invariance to mean shifts, the centering matrix $H=I - \frac{1}{n} 11^T$ is applied. The final \gls{CKA} score is given by 
+Another approach to identify redundant model components is to compare their input representations with their corresponding outputs representations \cite{men2024shortgpt}. If the transformation between the input and output is marginal, indicating that the specific component performs an approximate identity mapping, the model part is considered a candidate for removal. To quantify the similarity between the input and output features of a transformer block, the central kernel alignment (\gls{CKA}) metric \cite{kornblith2019similarity, pons2024effective} is employed. Let $X \in \mathbb{R}^{n\times d}$ denote the input and $Y \in \mathbb{R}^{n\times d}$ the output features which should be compared. First, the kernels $K$ and $L$ need to be chosen which are the inner product of the input $K=XX^T$ and the output $L=YY^T$ in the linear case. To ensure invariance to mean shifts, the centering matrix $H=I - \frac{1}{n} 11^T$ is applied. The final \gls{CKA} score is given by 
 \begin{equation}
 	\text{CKA}(K,L) = \frac{\text{HSIC}(K,L)}{\sqrt{\text{HSIC}(K,K) \text{HSIC}(L,L)}} \quad.
 \end{equation}
 This calculation utilizes the Hilbert-Schmidt Independence Criterion (\gls{HSIC}) \cite{gretton2005measuring} $\text{HSIC}(K,L) = \frac{1}{(n-1)^2}\text{tr}(KHLH)$ \cite{davari2022reliability}.
 
 \subsubsection{Metric Based Selection}
-A third approach to identify the least important model components is to remove or compress all components individually, e.g. each transformer block, and compute the metrics on a small reference dataset. In this work, we employ \gls{CMMD} and/or \gls{CLIP}-score to rank the importance of the individual model components. While \gls{CLIP} is used to evaluate the semantic prompt-image coherence, \gls{CMMD} serves as a measure for the general image quality and distributional fidelity. Since \gls{CMMD} and \gls{CLIP}-score produce values in different ranges and have an inverse optimization direction (minimization vs maximizaiton), for both metrics a separate ranking of the blocks is created where $r_{\text{CMMD},i}$ and  $r_{\text{CLiP},i}$ are the corresponding ranks of block $B_i$. The final importance score is obtained by computing the aggregated rank $r_{\text{final},i}$ from both metrics
+A third approach to identify the least important model components is to remove or compress all components individually, e.g. each transformer block, and compute for each configuration image quality metrics on a small reference dataset. Specifically, let $\{B_1, \dots, B_L\}$ denote the individual blocks of a transformer based model architecture. Each block is modified seperately leading to $L$ different model configuration $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ where $\hat{B}_i$ indicates that the $i^\text{th}$ block is modified. For each model configuration the metrics are computed. In this work, we employ \gls{CMMD} and/or \gls{CLIP}-score to rank the importance of the individual model components. While \gls{CLIP} is used to evaluate the semantic prompt-image coherence, \gls{CMMD} serves as a measure for the general image quality and distributional fidelity. Since \gls{CMMD} and \gls{CLIP}-score produce values in different ranges and have an inverse optimization direction (minimization vs maximizaiton), for both metrics a separate ranking of the blocks is created where $r_{\text{CMMD},i}$ and  $r_{\text{CLiP},i}$ are the corresponding ranks of block $B_i$. The final importance score is obtained by computing the aggregated rank $r_{\text{final},i}$ from both metrics
 \begin{equation}
 	r_{\text{final},i} = r_{\text{CMMD},i} + r_{\text{CLIP},i} \quad.
 	\label{eq:combined_importance}
 \end{equation}
-In our linear model compression approach (see sec. \ref{label}) the compression-scheme of the individual model parts leads to different numbers of removed parameters due to varying sizes of the blocks despite using the same compression percentage. Therefore, only a \gls{CMMD} value is normalized by the number of removed parameters to quantify the degradation of image quality per removed parameter.
+In our linear progressive compression approach (see sec. \ref{sec:LinearProgressiveCompression}) the compression-scheme of the individual model parts leads to different numbers of removed parameters due to repeated compression of individual blocks and different compression ratios per block. Therefore, only the \gls{CMMD} value per removed parameters $\frac{\text{CMMD}_i}{\text{Removed Parameters}}$ is leveraged to quantify the degradation of image quality per removed parameter and to ensure fair comparison.
 \subsection{Block Selection Algorithms}
+One challenge in structural model compression using metric based selection is that the importance of individual model components, e.g. transformer blocks, are normally determined in isolation meaning only one block is modified and the remaing parts of the model are fixed for computing the metrics.  However, in most cases, several components are compressed simultaneously. It cannot necessarily be assumed that removing the model components that individually had the least impact on model performance will also result in the best combination with the least reduction in image quality. In the following, methods to select the best subset of the model components are described and investigated in sec. \ref{label}.
 \label{sec:BlockSelectionAlgo}
+\subsubsection{Greedy Block Selection}
+The greedy algorithm is applied alongside the metric-based selection criteria. It is an iterative procedure where the importance of all uncompressed blocks is determined to identify and compress the least critical one. Following this step, the block importance is re-evaluated for all remaining uncompressed blocks. Concretely, let the model consist of $L$ transformer blocks $B=\{B_1, \dots, B_L\}$. 
+In the first iteration, for all $L$ combinations of model configurations $\mathcal{M}^{(1)} = \{ (B \setminus \{B_i\}) \cup \{\hat{B}_i\} \mid 1 \leq i \leq L \}$ the metrics are computed and the best block $B_j$ is selected according to the ranking. Let $\bar{B}_j$ denote the compressed version of block $B_j$.
+ In the second iteration, the metrics are re-computed for all $L-1$ uncompressed blocks
+ $\mathcal{M}^{(2)} = \{ (B \setminus \{B_i, B_j\}) \cup \{\hat{B}_i, \bar{B}_j\} \mid 1 \leq i \neq j \leq L \}$.  For the $n^\text{th}$ iteration $L-(n-l)$ uncompressed blocks remains. Let $B_\text{comp}$ denote the set of all previously compressed blocks then the potential candidates for compression are given by  $\mathcal{M}^{(n)} = \{ (B \setminus (B_\text{comp} \cup {B_i})) \cup B_\text{comp} \cup {\hat{B}_i} \mid B_i \in B \setminus B_\text{comp} \}$.
+ This process is repeated until the desired number of blocks to be compresssed has been identified.
+%  $\{\{\hat{B}_1, \dots, \bar{B}_j, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_{j-1}, \bar{B}_j, \dots,  B_L\}$, $\{B_1, \dots, \bar{B}_j, \hat{B}_{j+1}, \dots,  B_L\}$, $\dots$$\{B_1, \dots, \bar{B}_j, \dots, \hat{B}_L\}\}$. 
+%  
+  % $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ 
+  
 \subsubsection{Black-Box Optimization with Optuna}
 Optuna \cite{akiba2019optuna} is an open-source hyperparameter optimization framework. It primarily leverages a tree-strucured parzen estimator \cite{bergstra2011algorithms}, a bayesian optimization algorithms, to search the space of all possible hyperparmeter settings. It partitions the observed hyperparameter configurations into promising and non-promising candidates based on a user defined objective function. By modeling these two groups using probability density functions it draws a new set of hyperparameters that belongs to the promising group  with high probability. Through this informed search the global optimum can be found much faster than with non-adaptive methods like random or grid search. For an in-depth descritption of the Optuna algorithm the reader is refered to the original paper \cite{akiba2019optuna} because this would go beyond the scope of this work. \\
 
@@ -220,11 +231,22 @@ Various approaches can be chosen for structural model pruning.
 The standard approach of compressing transformer based diffusion and flow models \cite{Laptop, Koala, flux1-lite, flux_mini_2024} involves three main steps. First, the transformer blocks $\{B_1, \dots, B_L\}$ are sorted according to their importance, e.g. using \gls{CLIP}-score and \gls{CMMD} as importance proxy. Let $\{B^*_1, \dots, B^*_L\}$ denote the sorted blocks, where $B^*_1$ represents the least important block. Next, based on the desired compression ratio of the total model, a number $k \leq L$ of blocks is determined. Consequently, the blocks $\{B^*_1, \dots, B^*_k\}$ are modified based on the chosen compression strategy (see sec. \ref{sec:StructuralCompressionStrategy}). Finally, the compressed model is re-trained, e.g. using knowledge distillation, to recover the generation capabilities. This approach introduce a significant, abrupt structural alteration of the model, leading to temporary severe degeneration in image generation capabilities.
 
 \subsection{Progressive Model Compression}
-In contrast to one-shot model compression, progressive model compression \cite{ProgressiveDistillation} iteratively applies the three-step procedure described above. In each iteration the importance of the blocks is re-evaluated, the number of parameters to be removed specifies how many blocks need to be modified, and the model is then re-trained. The crucial difference is that the number of parameters removed in a single step is significantly smaller than in one-shot model compression. This leads to gradual and less severe performance degradation in one iteration which is easier recovarable. In the subsequent iteration, the block importance is re-assessed, as the relative block ranking may have changed as a result of the retraining. Another design choice concerns the number of parameters that are removed per iteration. On the one hand, the number of parameters can be set to a fixed value or, on the other hand, it could be chosen dynamically based on the importance metrics, e.g. by defining a threshold \gls{CMMD} value and performing retraining as if the model newly compressed model reaches it. This typically implies that in early iterations more parameters are removed than in later iterations.  
+In contrast to one-shot model compression, progressive model compression, e.g. \cite{ProgressiveDistillation}, iteratively applies the three-step procedure described above. In each iteration the importance of the blocks is re-evaluated, the number of parameters to be removed specifies how many blocks need to be modified, and finally the model is retrained. The crucial difference is that the number of parameters removed in a single step is significantly smaller than in one-shot model compression. This leads to gradual and less severe performance degradation in one iteration which is easier recovarable. In the subsequent iteration, the block importance is re-assessed for all remaining unmodified blocks $\{B_1, \dots, B_L\}\setminus \{B^*_1, \dots, B^*_k\}$, as the relative block ranking may have changed as a result of the retraining. Another design choice concerns the number of parameters that are removed per iteration. On the one hand, the number of parameters can be set to a fixed value or, on the other hand, it could be chosen dynamically based on the importance metrics, e.g. by defining a threshold \gls{CMMD} value and performing retraining as if the model newly compressed model reaches it. This typically implies that in early iterations more parameters are removed than in later iterations.  
 
 
 \subsection{Linear Progressive Compression}
-Our approach, linear compression ratio, is a further development of progressive model compression and relies on the \gls{SVD} compression scheme where the same block can be compressed multiple times as described in sec. \ref{sec:IterativeRepeatedSVDCompression}. Concretely, as block importance metric the \gls{CMMD} value per removed parameter is leveraged that is esepcially important because already compressed blocks can be further compressed such that the \gls{CMMD} only is only a fair metric if all blocks would have the same size. Let again $\{B^*_1, \dots, B^*_L\}$ denote the sorted blocks, one specify by how much the least important block is compressed denoted as $S$, e.g. $40\%$, the number of blocks that should be compressed $k$ and the number of total parameters $N$ that should be removed. The compression rate is reduced linearly for each additional block, meaning the least important block $B_1^*$ is compressed most, the second least import block $B_2^*$ is compressed a little bit less  and block $B_k^*$ the most important block of all blocks that are compressed is compressed least. Concretely, the linear compression schedule works as follows: Let $c_i$ be the compression ratio of the $B_i^* \in \{B^*_1, \dots, B^*_k\}$, $c_1 = S$ the start compression ratio that decrease by a slope $x$ then the compression ratio for every block $B_i^*$ is given by
+\label{sec:LinearProgressiveCompression}
+Our approach, linear progressive compression, is a further development of progressive model compression. Instead of compressing all blocks uniformly and each block only once, the compression ratio of each block is determined depending on the importance of the block and every block can be modified in several different iterations. \\
+ The approach consists of the same three main steps. First, the block importance is determined by leveraging the \gls{CMMD} value per removed parameter. Let $P_i$ $(i \in \{1, \dots, L\})$ denote the current number of paramters of block $B_i$ which may differ between blocks as the blocks may have been already compressed during previous iterations. For generating the images based on those the \gls{CMMD} values are computed, each block is compressed by a fixed percentage $c_\text{fixed}$. Specifically, this means that potentially different number of parameters are removed for each block. Therefore, the final importance score for each block $B_i$ is given by 
+ \begin{equation}
+ 	s_i = \frac{\text{CMMD}_i}{P_i \cdot c_\text{fixed}}
+ \end{equation}
+where $\text{CMMD}_i$ is the \gls{CMMD} value obtained by the dataset generated with the model where block $B_i$ is compressed leading to the sorted order of block $\{B^*_1, \dots, B^*_L\}$ where $B_1^*$ has the smallest importance score. To determine the compression ratio for each block we propose a linear compression schedule where the least important block is compressed most, and blocks of higher importance less. Concretely, three parameters need to be specified by the user to compute the individual compression ratios $c_i$, namely the total number of paramters to be removed $N$, the number of blocks that are compressed during the current iteration $k$ and the compression ratio of the least important block $c_1 = S$ to which we refere to as base compression ratio. To determine the compression ratios $c_i$ of the remaining blocks $B_i^* \in \{B^*_1, \dots, B^*_k\}$,   
+
+%
+%Therefore, we rely on the \gls{SVD} compression scheme as described in sec. \ref{sec:IterativeRepeatedSVDCompression}.  Let again $\{B^*_1, \dots, B^*_L\}$ denote the sorted blocks, one specify by how much the least important block is compressed denoted as $S$, e.g. $40\%$, the number of blocks that should be compressed $k$ and the number of total parameters $N$ that should be removed. The compression rate is reduced linearly for each additional block, meaning the least important block $B_1^*$ is compressed most, the second least import block $B_2^*$ is compressed a little bit less  and block $B_k^*$ the most important block of all blocks that are compressed is compressed least. Concretely, the linear compression schedule works as follows: 
+
+ the base compression ratio $S$ is decrease by a slope $x$ between every block. Therefore, the compression ratio for every block $B_i^*$ is given by
 \begin{equation}
 	\label{eq:CompressionRatio}
 	c_i = S - ((i-1) \cdot x)
@@ -232,15 +254,15 @@ Our approach, linear compression ratio, is a further development of progressive 
 with $i \in \{1, \dots, k\}$. The goal is to identify $x$ based on the parameters $S, N, k$. The total number of parameter that are removed is computed by
 \begin{equation}
 	\label{eq:TotalParam}
-	P_\text{total} = \sum_{i=1}^{k} P_i \cdot c_i
+	P_\text{total} = \sum_{i=1}^{k} P^*_i \cdot c_i
 \end{equation}
-where $P_i$ is the current parameter count of block $B_i^*$ that might be already compressed. To solve for $x$, eq. \ref{eq:CompressionRatio} and eq. \ref{eq:TotalParam} are combined
+where $P^*_i$ is the current parameter count of block $B_i^*$. To solve for $x$, eq. \ref{eq:CompressionRatio} and eq. \ref{eq:TotalParam} are combined
 
 \begin{equation}
 	\begin{split}
-		& \sum_{i=1}^{k} P_i (S - (i-1) \cdot x) = N \\
-		\Leftrightarrow \quad & \sum_{i=1}^{k} (P_i \cdot S) - \sum_{i=1}^{k} (P_i \cdot (i-1) \cdot x) = N \\
-		\Leftrightarrow \quad & \sum_{i=1}^{k} (P_i \cdot S) - N = x \cdot \sum_{i=1}^{k} (P_i \cdot (i-1))
+		& \sum_{i=1}^{k} P^*_i (S - (i-1) \cdot x) = N \\
+		\Leftrightarrow \quad & \sum_{i=1}^{k} (P^*_i \cdot S) - \sum_{i=1}^{k} (P^*_i \cdot (i-1) \cdot x) = N \\
+		\Leftrightarrow \quad & \sum_{i=1}^{k} (P^*_i \cdot S) - N = x \cdot \sum_{i=1}^{k} (P^*_i \cdot (i-1))
 	\end{split}
 	\label{eq:linear_compression_derivation}
 \end{equation}
@@ -248,18 +270,19 @@ where $P_i$ is the current parameter count of block $B_i^*$ that might be alread
 
 ending in the final equation for the slope
 \begin{equation}
-	x = \frac{\sum_{i=1}^{k}\left(P_i \cdot S \right) - N}{ \sum_{i=1}^{k}\left(P_i \cdot (i-1)  \right)} \quad.
+	x = \frac{\sum_{i=1}^{k}\left(P^*_i \cdot S \right) - N}{ \sum_{i=1}^{k}\left(P^*_i \cdot (i-1)  \right)} \quad.
 \end{equation}
-The input parameters $S,N,k$ specified by the user have to meet two conditions. First, $N \leq S \cdot \sum_{i=1}^{k} P_i$ meaning the total number of parameters that should be removed during this interation must not be larger than the number of parameters one obtain when using $S$ as compression ratio for all blocks $B_i^*$. Otherwise, the compression ratio would increase for more important blocks which would contradict the ranking strategy. Second, the compression ratio of the last block $cx_k$ must not be negative which results in the following condition
+The input parameters $S,N,k$ specified by the user have to meet two conditions. First, $N \leq S \cdot \sum_{i=1}^{k} P^*_i$ meaning the total number of parameters that should be removed during this iteration must not be larger than the number of parameters one obtain when using $S$ as compression ratio for all blocks $B_i^*$. Otherwise, the compression ratio would increase for more important blocks which would contradict the ranking strategy. Second, the compression ratio of the last block $c_k$ must not be negative which results in the following condition
 \begin{equation}
 	\begin{split}
 		& 0 \leq c_k = S - (k-1) \cdot x \\
-		\Leftrightarrow \quad & 0 \leq S - (k-1) \frac{S \sum_{i=1}^{k} P_i - N}{\sum_{i=1}^{k}(P_i \cdot (i-1))} \\
-		\Leftrightarrow \quad & N \geq S \sum_{i=1}^{k} P_i - \frac{S \sum_{i=1}^{k}(P_i \cdot (i-1)) }{k-1} \quad.
+		\Leftrightarrow \quad & 0 \leq S - (k-1) \frac{S \sum_{i=1}^{k} P^*_i - N}{\sum_{i=1}^{k}(P^*_i \cdot (i-1))} \\
+		\Leftrightarrow \quad & N \geq S \sum_{i=1}^{k} P^*_i - \frac{S \sum_{i=1}^{k}(P^*_i \cdot (i-1)) }{k-1} \quad.
 	\end{split}
 \end{equation}
 
-In total we get the following condition for the total number of paramters to remove in one iteration 
+In total we get the following condition for the total number of paramters to remove in one iteration based on the choice of $S$ and $k$
 \begin{equation}
-	\ S \sum_{i=1}^{k} P_i - \frac{S \sum_{i=1}^{k}(P_i \cdot (i-1)) }{k-1}  \leq N \leq S \cdot \sum_{i=1}^{k} P_i \quad.
+	\ S \sum_{i=1}^{k} P^*_i - \frac{S \sum_{i=1}^{k}(P^*_i \cdot (i-1)) }{k-1}  \leq N \leq S \cdot \sum_{i=1}^{k} P^*_i \quad.
 \end{equation}
+After obtaining the the compression ratios $c_i$ the model can be compressed based on the \gls{SVD} compression scheme as described in sec. \ref{sec:IterativeRepeatedSVDCompression} and then be retrained. Afterwards, the procedure is repeated until the desired model size is achieved.
